--- a/src/components/Covid.css
+++ b/src/components/Covid.css
@@ -23,7 +23,7 @@
 }
 .card {
     
-    min-width : 500px;
+    min-width : 330px;
     min-height: 250px;
     display: inline-block;
     margin: 15px;
@@ -71,3 +71,9 @@
     color: white;
     text-shadow: 4px 6px 8px rgba(0,0,0,0.8);
 }
+@media only screen and (max-width: 400px) {
+    card {
+        margin: 15px auto;
+        
+    }
+  }
